--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "element-plus": "^2.3.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -18,6 +19,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "less": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
