--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 8888",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "element-plus": "^2.3.1",
+    "axios": "^1.3.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -19,7 +19,6 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "less": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
